# opencv_demo

./: .gitignore  CMakeLists.txt  main.cpp
Tests/: BasicDrawingTest.cpp  ColorReuctionTest.cpp  DFTTest.cpp  GradientImageProcess.cpp  HoughTest.cpp  MatTest.cpp  MorpholgogicalTranformationTest.cpp  PointTest.cpp
