cmake_minimum_required(VERSION 3.12)
project(opencv_demo)
find_package(OpenCV)
set(CMAKE_CXX_STANDARD 14)
include_directories($(OpenCV_INCLUDE_DIRS))
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googlemock/include)
add_executable(opencv_demo main.cpp Tests/PointTest.cpp Tests/MatTest.cpp Tests/HoughTest.cpp Tests/ColorReuctionTest.cpp)
target_link_libraries(opencv_demo ${OpenCV_LIBS})
target_link_libraries(opencv_demo gtest gtest_main)